[package]
name = "mqtt-to-influx"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rumqttc = "0.24"
influxdb = { version = "0.7", default-features = false, features = ["reqwest-client-rustls"] }
influxdb2 = "0.5"
jsonpath-rust = "0.3"
evalexpr = "11.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
